Fix image sizes & overflow hidden

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Rubik', sans-serif;
+    overflow: hidden;
 }
 .grid {
     display: grid;
