--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -39,6 +39,7 @@
 }
 .app__image {
     width: 100%;
+    height: 45%;
 }
 .ind-image {
     margin: auto;
